# My-Embassy-STM32-Template

./: Cargo.toml  README.md  arch.rhai  cargo-generate.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
