[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
# Do not block when probe-rs disconnect
# https://docs.rs/defmt-rtt/latest/defmt_rtt/#blockingnon-blocking
defmt-rtt = { version = "1.1.0", features = ["disable-blocking-mode"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-stm32 = { version = "0.6.0", features = ["defmt", "{{ chip | downcase }}", "memory-x", "time-driver-any", "unstable-pac"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
lto = "fat"
opt-level = "s"
incremental = false
codegen-units = 1
debug = 2
